recommended url links are corrected and UI improvements added

--- a/cocomapapp/templates/account/signup.html
+++ b/cocomapapp/templates/account/signup.html
@@ -19,7 +19,7 @@
   <div class="text-center" >
     <h3>Or</h3>
   </div>
-  <a class="btn btn-lg btn-primary btn-block" href="{{ login_url }}">{% trans "Sign In" %} &raquo;</a>
+  <a class="btn btn-lg btn-primary btn-block" href="{{ login_url }}">{% trans "Login" %} &raquo;</a>
   <!--<button class="primaryAction btn btn-lg btn-primary btn-block" type="submit">{% trans "Sign In" %}</button>-->
 </form>
 </div>
