--- a/cocomapapp/templates/account/login.html
+++ b/cocomapapp/templates/account/login.html
@@ -8,7 +8,7 @@
 {% block content %}
 <link href="/static/signin.css" rel="stylesheet"/>
 <div class="container-fluid " >
-<h1 class="text-center">{% trans "Sign In" %}</h1>
+<h1 class="text-center">{% trans "Login" %}</h1>
 
 {% get_providers as socialaccount_providers %}
 
@@ -43,7 +43,7 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
       {% endif %}
     </div>
       <!--<a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>-->
-      <button class="primaryAction btn btn-lg btn-primary btn-block" type="submit">{% trans "Sign In" %}</button>
+      <button class="primaryAction btn btn-lg btn-primary btn-block" type="submit">{% trans "Login" %}</button>
       <div class="text-center" >
         <h3>Or</h3>
       </div>
