--- a/cocomapapp/templates/topicAdd.html
+++ b/cocomapapp/templates/topicAdd.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-		
+
     <script src="/static/selectize.js" type="text/javascript"></script>
     <script src="/static/topicadd.js" type="text/javascript"></script>
     <script src="/static/typeahead.bundle.js" type="text/javascript"></script>
@@ -13,7 +13,7 @@
   <div class="col-sm-9 col-md-9 main">
 		<!-- title -->
 		<div class="mb-for-footer">
-      <form action="" method="post">{% csrf_token %}
+      <form action="" method="post">
         <div class="row">
           <div class="col-md-1"></div>
           <div class="col-md-10">
@@ -72,7 +72,7 @@
           <div class="col-md-4"></div>
           <div class="col-md-4">
               <!-- <a href="/cocomapapp/topic/second" id="publish" style="width:100%" type="button" class="btn btn-primary">Publish</a> -->
-  						<button id="submit" style="width:100%" class="btn btn-primary">Publish</button>
+  						<button id="formsubmit" style="width:100%" class="btn btn-primary">Publish</button>
           </div>
           <div class="col-md-4"></div>
           <div class="col-md-5"></div>
